# omnia

./: .editorconfig  .pre-commit-config.yaml  README.md  TODO  __main__.py  config.yaml  omnia.py  pyproject.toml  requirements.txt
cogs/: __init__.py  console.py  fun.py  moderation.py  presence.py
extensions/: console.py  moderation.py  presence.py
omnia/: __main__.py  fancy_embed.py  omnia.py
omnia/extensions/: blocklist.py  console.py  error_handling.py  fun.py  help_command.py  membertags.py  miscellanous.py  moderation.py  presence.py  tag.py  tags.py  tickets.py
