[tool.poetry]
name = "omnia"
version = "0.0.1"
description = "THE Discord bot."
authors = ["szskill"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.4.0"
PyYAML = "^6.0"
python-dotenv = "^0.20.0"
rich = "^12.1.0"
aioredis = "^2.0.1"
fakeredis = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
